--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,9 @@ body {
 h1,h2,h3,h4,h5,h6 {
 	font-family: 'Roboto Slab', serif;
 }
+a:focus{
+	outline: 0;
+}
 .btn {
 	background: #b2064f;
 	outline:none;
@@ -265,9 +268,14 @@ nav {
 // About
 .about {
 	background:#eee;
-	padding:80px 0 40px 0;
+	padding:120px 0 40px 0;
+	.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 	img {
-		margin-left: 25px;
 		height: 300px;
 		width: 300px;
 		border-radius:50%;
@@ -334,11 +342,20 @@ nav {
 	background: linear-gradient(#130b19,#53346D);
  	// background-image: url("../images/bg.png");
 }
+.mt {
+  	display: flex;
+  	flex-direction: column;
+  	justify-content: center;
+  	align-items:center;
+  	margin-bottom: 25px;
+  	&:last-child{
+  		margin-bottom: 0;
+  	}
+ }
 
 // Management
 .management {
-	padding:115px 0 70px 0;;
-  
+	padding:115px 0 70px 0;
 
   h1 {
   	color: #fff;
@@ -353,7 +370,6 @@ nav {
 		width: 150px;
 		background:#fff;
 		border-radius:50%;
-		margin-left: 50px;
 	}
 	.btn {
 		margin-top: 20px;
