--- a/scss/style.css
+++ b/scss/style.css
@@ -68,8 +68,8 @@ nav {
   width: 100%;
   height: 550px;
   background: url("../images/8.jpg") no-repeat center center;
-  background-size: cover;
-  -webkit-background-size: cover;
+  background-size: 100% 100%;
+  -webkit-background-size: 100% 100%;
   -moz-background-size: cover;
   -o-background-size: cover; }
   .home-page .main-view .programs {
@@ -191,9 +191,8 @@ nav {
   .secondary-nav ul {
     display: flex;
     justify-content: space-around;
-    white-space: nowrap;
-    overflow-x: auto;
-    overflow-y: hidden; }
+    align-items: center;
+    font-size: 12px; }
   .secondary-nav li {
     list-style: none;
     padding: 2px 20px; }
@@ -380,5 +379,12 @@ nav {
     align-items: center; }
     .footer footer li {
       margin: 10px 30px 0 0; } }
+@media all and (max-width: 768px) {
+  .secondary-nav ul {
+    flex-direction: column;
+    font-size: 16px; }
+
+  .about {
+    padding-top: 200px; } }
 
 /*# sourceMappingURL=style.css.map */
