--- a/scss/style.scss
+++ b/scss/style.scss
@@ -249,9 +249,8 @@ nav {
 	ul {
 		display: flex;
 		justify-content: space-around;
-		white-space: nowrap;
-    overflow-x: auto;
-    overflow-y: hidden;
+		align-items: center;
+		font-size: 12px;
 	}
 	li {
 		list-style: none;
@@ -534,5 +533,16 @@ nav {
 				margin: 10px 30px 0 0;
 			}
 		}
+	}
+}
+
+
+@media all and (max-width: 768px) {
+	.secondary-nav ul {
+		flex-direction: column;
+		font-size: 16px;
+	}
+	.about{
+		padding-top: 200px;
 	}
 }
