--- a/scss/style.css
+++ b/scss/style.css
@@ -192,7 +192,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    font-size: 12px; }
+    -webkit-padding-start: 0 !important; }
   .secondary-nav li {
     list-style: none;
     padding: 2px 20px; }
@@ -382,7 +382,10 @@ nav {
 @media all and (max-width: 768px) {
   .secondary-nav ul {
     flex-direction: column;
-    font-size: 16px; }
+    font-size: 16px;
+    -webkit-padding-start: 0 !important; }
+    .secondary-nav ul li {
+      padding: 2px 0; }
 
   .about {
     padding-top: 200px; } }
