--- a/scss/style.scss
+++ b/scss/style.scss
@@ -250,7 +250,7 @@ nav {
 		display: flex;
 		justify-content: space-around;
 		align-items: center;
-		font-size: 12px;
+		-webkit-padding-start: 0 !important;
 	}
 	li {
 		list-style: none;
@@ -541,6 +541,10 @@ nav {
 	.secondary-nav ul {
 		flex-direction: column;
 		font-size: 16px;
+		-webkit-padding-start: 0 !important;
+		li {
+			padding: 2px 0;
+		}
 	}
 	.about{
 		padding-top: 200px;
