--- a/scss/style.scss
+++ b/scss/style.scss
@@ -361,8 +361,11 @@ nav {
   	font-size: 44px;
   	margin-bottom: 80px;
   }
-  h4,h5 {
+  h4{
   	color: #dfd4d4;
+  }
+  h6 {
+  	color: #aaa;
   }
 	img {
 		height: 150px;
@@ -415,7 +418,7 @@ nav {
 		color: #fff;
 	}
 	p {
-		color: #fff;
+		color: #aaa;
 	}
 }
 
