--- a/scss/style.scss
+++ b/scss/style.scss
@@ -81,8 +81,8 @@ nav {
 		width:100%;
 		height:550px;
 		background: url('../images/8.jpg') no-repeat center center;
-		background-size:100% 100%;
-		-webkit-background-size: 100% 100%;
+		background-size:cover;
+		-webkit-background-size: cover;
 	  -moz-background-size: cover;
 	  -o-background-size: cover;
 
